--- a/principles/index.html
+++ b/principles/index.html
@@ -185,7 +185,7 @@
   <tr><td rowspan="4"><img src="dm.png" alt="A 2 dimensional barcode" /></td><td>GTIN</td><td>09506000134352</td></tr>
   <tr><td>Batch/lot</td><td>ABCDEF</td></tr>
   <tr><td>Serial number</td><td>1234</td></tr>
-  <tr><td>Exiry date</td><td>2022-12-25</td></tr>
+  <tr><td>Expiry date</td><td>2022-12-25</td></tr>
 </table>
 
 <p>The fourth data field is not an identifier in the usual sense of the word, but an attribute. That is, a characteristic of the item, in this case its expiry date. Other attributes in the GS1 system include things like measured weight, delivery locations and shipment contents.</p>
